@@ -5,27 +5,24 @@ AUX bootled-initd-1 540 SHA256 9ed71f592bca04cb31c41e866b8320548b111abd5647cb178
 AUX bootled-initd-2 983 SHA256 389955ea0dc0c8eae081d041855963dbab6c28a43bb1abc9ba0000affeb76373 SHA512 2d391d400002e3cf9d49ef4a937f65c0ea824cefc1b3b4cf2b0795ba3889756056684301378dc155184e799d6bf342e6272787a916e818fb358fe10a3b57f967 WHIRLPOOL 7fe5e890f4daaa23b6a71900e35769560a25af59f4c1c8de4a329a728791e4a940f84aae9c465b58067a94af297d9e9928ceadf1063756539802d589c98ec916
 AUX copynetsetup-initd-1 773 SHA256 0b932fca9a6447a733e5adb37494cb0caab1ee010fe776b76c3945150838ddfe SHA512 c1f5a3c99d623da64b99e17c7d4fcf3a08bda0785bf7bfe65b3635675ece76e486ae63133177560e3af68d973c33eae3ea1b4d7ebaeb47dac7ac1dd9a0c3ef0e WHIRLPOOL 4e25acdf8b197d76e58b3907f77a5365757030851181227595afa93f1d378d62a43715278ce8570f2f90c36de4e649f3d2b5478828efaea2a0cea5dd394f3df0
 AUX marvell-tso-udev-1 222 SHA256 6ed5ef22ebcfd90bc2c2187f429516b6b8c6d26108b531629a3341ce48addfae SHA512 e0acb1308c3f25afe5e9e709ccc04a0fd33c38f12ac3ca6a07a756b56e82ff85d445443bfa01e1d4c1f4b82329418a42831dd83b8ac58f12c235a8f3fb66962a WHIRLPOOL b5f5cf0667d957db37fcb53642a811c87d9ef5414a320f367170933d715b3724442237e65b07762056167766d84c4f4497c1e67f7131b6c4bd5d630974523fdb
-AUX poweroff-b3-1 148 SHA256 348edd6404476cf60b8d08ae9c2bd06b7362ecbf9f9af94d09b8d8d4de3216ef SHA512 2a81ad4c0fc2d729fe05214bfb0b9ce1778cebc0c739aac9a9a98ca8b4eedd4b42fe166d23d7e9febd06fbda1622b9f3905dda53cf92be409c781864aded1b81 WHIRLPOOL e287947d63f9dc61b2030b7a2cd16f5dd3e8cbefb9dba441f1331b58298e071b24ceb7091f52a2309f26e1f054059cef07d55ad672e223cb900bd88008aac13c
-EBUILD b3-init-scripts-1.0.0.ebuild 717 SHA256 6f0fa52a4105ace3ae2c23ae90e6b5b6d6c1729fe0080c0f5e7d8f4332b0eaaa SHA512 8a7df79c255e05793083c9112068bca2cdfc85446d7fb5b4d3ca110048350d4717d3d66cf9156d634a9ac80b5e23313335be4757a20c339c0fd44a4d81f81b13 WHIRLPOOL 89c7089d745b45e8790f60faeaff2b4c538390c90caf0313c0e4db1b7c1c7780d84699e1935624ba069a47510cbce6164af9e6bc06df86f4c38d1399969568f5
-EBUILD b3-init-scripts-1.0.1.ebuild 861 SHA256 1f219a208e91ea6ca21f77eb152f4ef0ec99450e080657223c067ea59f4f2134 SHA512 1ee8912ef506ff5253647a0cdfb057bb21f858a89598ec04de94d3d61d49c5db1c965c225d2b2c037c7b29c07692f644d715d7827d321b39f6d507d2528505a6 WHIRLPOOL dfeda6c2090a2ae7bda43445ad984279c1f5798699ee8d01b5e692944d4396e5331d7644be731b079185796fa0a295f3da0f5ddd30f96980528ef30c2493054e
-EBUILD b3-init-scripts-1.0.2.ebuild 943 SHA256 ebc8189b1401aac424e489459ad8f583eba69add82e15ae57c13a805a3281b0d SHA512 25341705bc5376eda13e50e1573ee6c15d6c93f2af0e88decb9aa5338b3c9bdc35a02d0f5ca03fda486e0b331ae76df12b81a386edb3279f7258c37cc9c22ef1 WHIRLPOOL 084cf643c6902408f1dbe5327ba2e1c236f6cca57aaa74242dfa2f8cbab5f271fdefae38d97c6bb6fc727b52fb9d6bd586dc47b7ed981361717f17a45c5a67bf
-EBUILD b3-init-scripts-1.0.3.ebuild 943 SHA256 225e66e9d3b734f8a163ebd88913931ced845d6f600f8e690c8c361b766113c9 SHA512 a22bb4e1548ccc1e72fde286e349b95d15213c7d870e85f58dbdee0447fe295570083b8667deda92d87f901bd661b42cabcf1bf1a433c3ba56ad2d095f23cb69 WHIRLPOOL 967185d562646b281588c502231df5494e03ced6519275954393eebf2a0f60d44065fb49e849f459940b8411957cb31a29ba09946f68c17a3f8e924d45380364
-MISC ChangeLog 709 SHA256 de8786e8f88b0dcb63b3d7f71767bb70a1537e81a5608098a4e33df3e1358aea SHA512 f5a5e8c509055d10dbe3180223c64c809b751c8725f895421c0aa8fdf9cb8d28b19c4f5baa07e339e3ce29880f532f99e621f9e1118a7cc1d68df89afeaf5d79 WHIRLPOOL b6accdd625212b89c2a2740cbabd0ed7905d27a95b4d2f036473e14f00401051f9db347741e34df1faaa9fb5d6a6ea27dedf47ed4743551ac3ca7f35a2072147
+AUX poweroff-b3-1 273 SHA256 af83927b32add243ef00d03bef81058f7466b969fdd08c3cab76469c66768cdd SHA512 166a7491f4707e1ec3fa9e5f9e8c3deb49c531e4e10e5d33eeb84665e4b8b0bfb1f550574e8f07e73173ba3ce7aafcc73916f0aa0272ccfd381e7f5d2fb11a2c WHIRLPOOL 08bc46fd7bfdadb84cffb7c2a8ecf569eb21438af976a2c8a10c5e06df1dce2e8096f97567c4e0d5c058459fb92d236b7d1b3bfce30e78bcb8ca8e97a20981ba
+EBUILD b3-init-scripts-1.0.4.ebuild 946 SHA256 011124c7c86c1b9d27e61af6daa6eca6e1c54f4c217362101c6cbad9967189ac SHA512 7b38ea8229715413bbdfe39f3245114346af0e7447b001b6a5d55a3c83db1c1d211d41b33ff4904dbc277e8d87547bcbc84d056309164d9d20157dd1980684a1 WHIRLPOOL 878e109da6f81ad9d2730bf559b17114667d13fd004a976768cafec6d00b717c119c74c46ad0afef4166174f20f02db07d756055c4e6047f85a4878af0530fe3
+MISC ChangeLog 1020 SHA256 f322e72eab170c8b94c24dcde8fc4f7bb9205981efe39ce184c7df98fbeb9a8d SHA512 f140607ec9e7efa17a78122d7726f2bfcea7a45c163f4fe5bb1439d743ef2f6aaeacdafd6545fca1f0af66436d527f83a1573539441ce114759d3c2f95f5f9e6 WHIRLPOOL 5cb6ac5a2053275f91b1c80ea079014514fbbe7be4a9367b577faf4d3c1ed12dbc9f24db78237532d64a9ccce9dadb590e6339d11977176f1f9490a19663269e
 MISC metadata.xml 617 SHA256 c4526e3fb19b3a6d16064ca831432bc3ad172c2903951b19b3ac88b042555e1e SHA512 23c7b366d54b3174a3de4b033c15668aca5bfb2322050aea388aec09f4d234b37766accd16d473670721453c9eda3ce918fdc8e646de3e643fb2e597e1caea3c WHIRLPOOL 34148bd254c5ca25d0a33c20f9609beb834c4b6514cc445413522645a81c087da32aff08a340bae9bcdc50ac643ba91724df618836d255f8138a698d212774d5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU2QNPAAoJEDHIDbLd52zqXA0P/ixPFuhVjzsoKm9SK7oyZJum
-opYqAoFLwcDN+CX1vdYYawxRxHMMqD6AyfjP0rffCxH4JLGQiJYRWh8WMjQUC2WV
-bohbwMiuFWgdSvFqGdm2daOt7rWOUibRzRGTYANqxIL31vfetaQjSwNR6jIlvIvn
-krOz9Htym/c5X53/4htl27vGzRZljsX/W3lcdNdRNiQGDGgnmuv3HH2mJgLw5xy4
-MaqK6ipSoSBTUeXOl0A1+b5G/HjMFFszv0PVAvYTmuCo71HOdxY4V8ScuWXyO3/F
-yD7lt27JbYUM7P8fCEvC7sq3sb9X2h85JkhRBoJI2UEpd3U2r1nMgetxrlCtPonP
-iUwopwQDuYDVrD1V5TvaG/opchTqn32DSl0CRG0L9Fi48OMMfnMXySyQ48ZXSe43
-TQ2lkdg9idPsvKXX4/oBa26YPy68Eo86TXoWY0Pz0fR6W0wq3ALFCUT54Hj90NpL
-qFF/UWwU17QPJYmkBRuzynG2OOUg971J/NHGsqNrTwlAwwR7umC8VRx2FsP+QzS/
-BdwEevqKJq2limOZ1fUQWN4hLME72K7wSidb+LLt51zCMqcthSz0Wh6nWjBnoWzv
-f2WhGSl9l8CekTImhWFQH6Up+Ter8a05/GYGv5gxNFTL50luzYJEvx7oacYew8a0
-iSmxve8GQxy910UU8Qc9
-=9fLG
+iQIcBAEBCAAGBQJV9vmiAAoJEDHIDbLd52zqmmMP/196nymu7BgncJ1IBZqcpWY6
+Kf3u1RFG2rgin28DcR0Fi/mpGTmv5cYnQl1en4mOlglQQd7Slkg1Rk6wokgXL3Jw
+QgXWaKjdZtS8r2GvKqZ/ti/aufto8wQ7Dh1wc54Ha6C5QsLtAsDJbkPUYA5m3SwL
+E/M5thJ9gImC1DttZimDkdU5i2Te09Hzrwgi0yLSv8yzz3PbAjz7tht42wfbjlEX
+Lwt3Y0vS2bU5OkbpxQjcOJ4P0DB9cYDYkSeNnm1chnhF5bVuAKjTWsoRu7Rw3RZS
+XCgdqTpCmCaE9FRjQ6bIjDFvs60fTksua+l8OH7u8nk0lPAWZp+ke++2wc3goPuB
+n8wET8wxbiLP/Ycz+LeeK7lAbxdbA3yf2x+saAb2eztUMuLiQu96qvOjDJs6aCTk
+BrIJqsxUW/cWv3AG1jonLN6KDPFDBYSHOaXiaow28bxUmk13oslfIkXPMcI/Phl9
+v6zCx17pmnez8rpRbbkg6Y7ru4ruLXMEk8PUjpGcj+Zy3f7Ap21hf1Nz9PIvWAZr
+ZzhiGd4i5aN9CqIxTA7wJowq4jbipmLjQA4HInhVq+M9QHqe6N5YhovPaZhyMi6B
+CoK5SCuGjbST3r9ZygtqTz07O2P/JDVrd1+M+MyCtujMY9UjwVCAXT+mI/APz8k8
+f3kLAfwCkjbSOLNn4IK8
+=gDZO
 -----END PGP SIGNATURE-----
