@@ -2,6 +2,14 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*b3-init-scripts-1.0.4 (14 Sep 2015)
+
+  14 Sep 2015; sakaki <sakaki@deciban.com> -b3-init-scripts-1.0.0.ebuild,
+  -b3-init-scripts-1.0.1.ebuild, -b3-init-scripts-1.0.2.ebuild,
+  -b3-init-scripts-1.0.3.ebuild, +b3-init-scripts-1.0.4.ebuild,
+  files/poweroff-b3-1:
+  Fix path reference for poweroff-b3; drop old
+
 *b3-init-scripts-1.0.3 (09 Feb 2015)
 
   09 Feb 2015; sakaki <sakaki@deciban.com> +b3-init-scripts-1.0.3.ebuild,
